@@ -1,6 +1,6 @@
 {
     "name": "@alaq/svg",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "description": "svg draw",
     "main": "index.js",
     "type": "index.d.ts",
