@@ -1,19 +1,46 @@
 import Point from './Point'
+
 let ns = 'http://www.w3.org/2000/svg'
 
 interface SvgElement extends SVGElement {
   proxyNode: SvgNode
 }
+
 type AttrSetter = {
   [attr: string]: (value: string | number) => AttrSetter
 }
 
 type CentralCoords = {
   rect(): DOMRect
-  getCenter(): Point
-  setCenter(p: Point)
+  get(): Point
+  set(p: Point)
   y(): number
   x(): number
+}
+
+type Transform = {
+  matrix: (...args: any) => Transform
+  matrix3d: (...args: any) => Transform
+  perspective: (...args: any) => Transform
+  rotate: (...args: any) => Transform
+  rotate3d: (...args: any) => Transform
+  rotateX: (...args: any) => Transform
+  rotateY: (...args: any) => Transform
+  rotateZ: (...args: any) => Transform
+  translate: (...args: any) => Transform
+  translate3d: (...args: any) => Transform
+  translateX: (...args: any) => Transform
+  translateY: (...args: any) => Transform
+  translateZ: (...args: any) => Transform
+  scale: (...args: any) => Transform
+  scale3d: (...args: any) => Transform
+  scaleX: (...args: any) => Transform
+  scaleY: (...args: any) => Transform
+  scaleZ: (...args: any) => Transform
+  skew: (...args: any) => Transform
+  skewX: (...args: any) => Transform
+  skewY: (...args: any) => Transform
+  current: string
 }
 type SvgNode = {
   target: SvgElement
@@ -21,28 +48,51 @@ type SvgNode = {
   addChild: {
     [node: string]: SvgNode
   }
-  cc: CentralCoords
+  center: CentralCoords
+  transform: Transform
 }
 
 export const createSVG = (id, w, h) => {
-  var svg = document.createElementNS(ns, 'svg') as SvgElement
-  const attr = proxyAttr(svg)
-  const addChild = proxyAddChildSVG(svg)
-  const proxyNode = { target: svg, attr, addChild, cc: cc(svg) } as SvgNode
-  svg.proxyNode = proxyNode
+  var target = document.createElementNS(ns, 'svg') as SvgElement
+  const attr = proxyAttr(target)
+  const addChild = proxyAddChildSVG(target)
+  const svgNode = {
+    target,
+    attr,
+    addChild,
+    center: center(target),
+  } as SvgNode
+  target.proxyNode = svgNode
+  svgNode.transform = transform(svgNode)
   // nodes.set(svg, proxyNode)
   attr.width(w)
   attr.height(h)
-  return proxyNode
+  return svgNode
 }
 
-export const createCircle = (n: SvgNode, size, color) => {
-  const circle = n.addChild.circle
-  circle.attr.r(size).fill(color)
-  return circle
-}
+// export const createCircle = (n: SvgNode, size, color) => {
+//   const circle = n.addChild.circle
+//   circle.attr.r(size).fill(color)
+//   return circle
+// }
 
-const cc = (el: SvgElement, parent?: CentralCoords) => {
+const transform = (n: SvgNode) => {
+  return new Proxy({ list: {} } as any, {
+    get(o, key) {
+      // console.log("___", o, ke)
+      return (...a) => {
+        o.list[key] = a
+        const cssValue = Object.keys(o.list)
+          .map((k) => `${k}(${o.list[k].join(' ')})`)
+          .join(' ')
+        // console.log({ cssValue })
+        n.attr.transform(cssValue)
+        return n.transform
+      }
+    },
+  }) as Transform
+}
+const center = (el: SvgElement, parent?: CentralCoords) => {
   const rect = () => el.getBoundingClientRect()
   const x = () => {
     const r = rect()
@@ -60,12 +110,12 @@ const cc = (el: SvgElement, parent?: CentralCoords) => {
     }
     return f
   }
-  const getCenter = () => new Point(x(), y())
-  const setCenter = (p: Point) => {
+  const get = () => new Point(x(), y())
+  const set = (p: Point) => {
     el.proxyNode.attr.cx(p.x)
     el.proxyNode.attr.cy(p.y)
   }
-  return { rect, x, y, getCenter, setCenter }
+  return { rect, x, y, get, set }
 }
 
 function proxyAddChildSVG(el: SvgElement) {
@@ -79,8 +129,9 @@ function proxyAddChildSVG(el: SvgElement) {
         target: child,
         addChild,
         attr,
-        cc: cc(child, target.proxyNode.cc),
+        center: center(child, target.proxyNode.center),
       } as SvgNode
+      proxyNode.transform = transform(proxyNode)
       // nodes.set(child, proxyNode)
       child.proxyNode = proxyNode
       return proxyNode
