@@ -1,4 +1,14 @@
 
+Love's not Time's fool, though rosy lips and cheeks    // Mon Sep 11 2023 08:06:07
+	alak@5.0.0-up.23
+		 - src/index.ts
+		 - src/namespaces.ts
+		 - test/events.test.ts
+	svg@0.0.6
+		 - src/Point.ts
+		 - src/index.ts
+
+
 The statute of thy beauty thou wilt take,    // Tue Aug 29 2023 20:30:19
 	alak@5.0.0-up.22
 		 - src/constructor.ts
